# paradigmapolitico2

./: Home.py  README.md  app.yaml  paradigma_politico.csv  pyproject.toml  requirements.txt
