[tool.poetry]
name = "paradigma-politico"
version = "1.0.0"
description = "Streamlit app designed to easily find our own political alignment"
authors = ["Miguel Costa <miguelptcosta1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.43.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
